# CW_4_

./: main.py  pyproject.toml  readme.md  vacancies.json
data/: vacancies.json
src/: api.py  file_handler.py  utils.py  vacancies.py  vacancy.py
tests/: test_api.py  test_file_handler.py  test_utils.py  test_vacancies.py
