[tool.poetry]
name = "cw_4"
version = "0.1.0"
description = "Поиск вакансий через API hh.ru"
authors = ["Ваше Имя <email@example.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"